Added JVM options to backend process